BE - get tasks data
